# algo-mvp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dummy_data_DUMMYTEST.csv  file::memory:  pyproject.toml  pytest.ini  setup.cfg  test.parquet
.github/workflows/: ci.yml  main.yml
.streamlit/: config.toml  secrets.toml
algo_mvp/supervisor/: server.py
cli/: fetch_data.py  run_dashboard.py
configs/: db_sample.yaml  live_sample.yaml  live_tradovate.yaml  orchestrator_sample.yaml  sample_equity.yaml  sample_futures.yaml  sample_sweep.yaml  supervisor_sample.yaml
scripts/: backtest_last45.sh  choose_best.py  start_paper.sh
src/algo_mvp/: backtest.py  fetch.py  models.py
src/algo_mvp/analytics/: __init__.py  api.py  utils.py
src/algo_mvp/backtest/: __init__.py  engine.py
src/algo_mvp/backtest/strategies/: __init__.py  three_day_momo.py  vwap_atr.py
src/algo_mvp/cli/: run_backtest.py  run_live.py  run_orchestrator.py  run_supervisor.py
src/algo_mvp/dashboard/: __init__.py  __main__.py  app.py
src/algo_mvp/data/: __init__.py  alpaca.py  fetcher.py  tradovate.py
src/algo_mvp/db/: __init__.py  __main__.py  alembic.ini  migrate.py  models.py  writer.py
src/algo_mvp/db/alembic/: env.py
src/algo_mvp/db/alembic/versions/: 20250511_0001_init_schema.py
src/algo_mvp/live/: broker_adapter_base.py  config.py  models.py  runner.py
src/algo_mvp/live/adapters/: __init__.py  alpaca.py  mock.py  tradovate.py
src/algo_mvp/orchestrator/: __main__.py  manager.py
src/algo_mvp/supervisor/: __init__.py  models.py  server.py
tests/: conftest.py  test_cli.py
tests/analytics/: conftest.py  test_api.py  test_utils.py
tests/backtest/: test_backtest_module.py  test_cli.py  test_engine.py  test_strategies.py
tests/cli/: test_run_dashboard.py  test_run_supervisor.py
tests/dashboard/: test_app.py  test_main.py  test_responsive.py
tests/data/: test_alpaca.py  test_fetchers.py  test_tradovate.py
tests/db/: conftest.py  test_cli.py  test_db.py  test_writer.py  test_writer_edge_cases.py
tests/docker/: test_compose.py
tests/integration/: test_e2e.py
tests/live/: dummy_strategy.py  test_config.py  test_runner.py  test_runner_db_integration.py
tests/live/adapters/: test_alpaca_adapter.py  test_alpaca_adapter_extended.py  test_mock.py  test_mock_adapter.py  test_tradovate_adapter.py
tests/orchestrator/: test_manager.py  test_manager_additional.py
tests/supervisor/: test_server.py
tests/workflows/: test_choose_best.py  test_paper_workflow_integration.py
workflows/templates/: fetch_last45.yaml  live_paper_template.yaml.jinja  orchestrator_paper.yaml.jinja
