[tool.poetry]
name = "algo-mvp"
version = "0.11.0"
description = "Algorithmic trading framework MVP"
authors = ["Dock108 <michael@dock108.io>"]
readme = "README.md"
packages = [{include = "algo_mvp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
backtrader = "^1.9.78.123"
vectorbt = "^0.27.3"
numpy = ">=1.22,<1.24"
pandas = ">=2.1,<2.2"
streamlit = "^1.45.0"
# alpaca-trade-api = "^3.2.0" # Replaced by alpaca-py
sqlalchemy = "^2.0"
alembic    = "^1.13"
pydantic = "^2.8.2"
tenacity = "^8.5.0"
pyarrow = "^17.0.0"
pendulum = "^3.0.0"
pyyaml = "^6.0.1"
requests = "^2.32.3"
plotly = "^5.24.0"
rich = "^13.7.1"
tqdm = "^4.66.4"
aiosqlite = "*"
websockets = "^12.0"
aiohttp = "^3.9"
nest_asyncio = "^1.6"
alpaca-py = "^0.40.0"
httpx = "^0.27"
fastapi = "^0.111"
uvicorn = {version = "^0.29", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
responses = "^0.25.7"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"
pytest-asyncio = "^0.23.0"
pytest-timeout = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__main__.py",
    # "src/algo_mvp/data/alpaca.py", # Removed - too broad
    # "src/algo_mvp/data/tradovate.py", # Removed - too broad
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG is True:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    'if __name__ == "__main__":', # Use single quotes to simplify
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod", # Escape the backslash for the dot
]
ignore_errors = true
fail_under = 80 # Keep overall fail under here

# Optional: Define specific path coverage if needed later
# [tool.coverage.paths]
# source = ["src", ".tox/*/lib/python*/site-packages"]

# Optional: Fine-grained report settings
# [tool.coverage.html]
# directory = "coverage_html_report"
